cv link - index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="about-btn-group">
-                    <a href="#me" class="about-btn">CV</a>
+                    <a href="https://github.com/AndreaCatalan/portfolio/blob/ab67e1651fec61244cae571357f6af2abe3a83af/Catalan%2C%20Andrea%20Melyn%20C.%20%7C%20CV.pdf" class="about-btn">CV</a>
                     <a href="https://github.com/AndreaCatalan" class="about-btn"> <i class="fa-brands fa-github"></i> </a>
                 </div>
              </div>
