open source project html

--- a/index.html
+++ b/index.html
@@ -189,6 +189,43 @@
         </div>
      </section>
 
+      <!-- Open-Source Projects -->
+      <section id="projects" class="projects">
+        <h2 class="section-title"> OPEN-SOURCE PROJECTS </h2>
+
+        <div class="project-grid">
+            
+            <div class="project-card">
+                <img src="images/cvlue.jpeg" alt="">
+                <h3> Fake News Detection</h3>
+                <p> Machine Learning </p>
+                <div class="btn-group">
+                    <a href="https://cvlueebycheene.netlify.app" target="_blank" class="btn"> Live Demo </a>
+                    <a href="https://github.com/AndreaCatalan/cvlue-crochet" target="_blank" class="btn"> Github </a>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <img src="images/royal rose.jpeg" alt="">
+                <h3> Deep Fake Detection </h3>
+                <p> Machine Learning </p>
+                <div class="btn-group">
+                    <a href="https://royalrose.netlify.app" target="_blank" class="btn"> Live Demo </a>
+                    <a href="https://github.com/AndreaCatalan/royal-rose" target="_blank" class="btn"> Github </a>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <img src="images/coming soon.jpg" alt="">
+                <h3> KRYPT (in progress) </h3>
+                <p> Web3.0 - Blockchain</p>
+                    <div class="btn-group">
+                        <div class="btn"> Please wait for me! </div>
+                    </div>
+            </div>
+        </div>
+     </section>
+
      <!-- Interest -->
      <section id="interests" class="interests">
         <h2 class="section-title"> INTEREST </h2>
