open source projects update

--- a/index.html
+++ b/index.html
@@ -196,31 +196,31 @@
         <div class="project-grid">
             
             <div class="project-card">
-                <img src="images/cvlue.jpeg" alt="">
+                <img src="images/fake news.jpg" alt="">
                 <h3> Fake News Detection</h3>
                 <p> Machine Learning </p>
                 <div class="btn-group">
-                    <a href="https://cvlueebycheene.netlify.app" target="_blank" class="btn"> Live Demo </a>
-                    <a href="https://github.com/AndreaCatalan/cvlue-crochet" target="_blank" class="btn"> Github </a>
+                    <a href="https://colab.research.google.com/drive/1xh_Im9z1zWjy6XM2G8QSfKO4HYe2PL-U" target="_blank" class="btn"> Live Demo </a>
+                    <a href="https://github.com/AndreaCatalan/Fake-News-Detection---Open-Source-Project" target="_blank" class="btn"> Github </a>
                 </div>
             </div>
 
             <div class="project-card">
-                <img src="images/royal rose.jpeg" alt="">
+                <img src="images/deepfake.jpeg" alt="">
                 <h3> Deep Fake Detection </h3>
                 <p> Machine Learning </p>
                 <div class="btn-group">
-                    <a href="https://royalrose.netlify.app" target="_blank" class="btn"> Live Demo </a>
-                    <a href="https://github.com/AndreaCatalan/royal-rose" target="_blank" class="btn"> Github </a>
+                    <a href="https://colab.research.google.com/drive/1ohH1dTBkMYIF4WC226NF2Bkvcrhxx0G-#scrollTo=M1WVZCR6CDvD" target="_blank" class="btn"> Live Demo </a>
+                    <a href="https://github.com/AndreaCatalan/MesoNet---Deepfake-1---Open-Source-Project" target="_blank" class="btn"> Github </a>
                 </div>
             </div>
 
             <div class="project-card">
-                <img src="images/coming soon.jpg" alt="">
-                <h3> KRYPT (in progress) </h3>
-                <p> Web3.0 - Blockchain</p>
+                <img src="images/krypt.jpeg" alt="">
+                <h3> KRYPT </h3>
+                <p> Web3.0 - Blockchain <br> <br> (in progress) </p>
                     <div class="btn-group">
-                        <div class="btn"> Please wait for me! </div>
+                        <a href="https://github.com/AndreaCatalan/web3.0" target="_blank" class="btn"> Github </a>
                     </div>
             </div>
         </div>
